# cltrier_lib

./: .gitignore  Makefile  Readme.md  pyproject.toml
examples/: 00-Chat-Basics.ipynb  01-Inference-Basics.ipynb  02-Classify-Basics.ipynb  X0-Future-Inference.ipynb  _example_chat_export.json
src/cltrier_lib/: __init__.py
src/cltrier_lib/classify/: __init__.py
src/cltrier_lib/inference/: __init__.py  schemas.py
